@@ -2,5 +2,5 @@ usr/bin/mysql_config
 usr/include/mysql
 usr/lib/*/libmariadbclient.a
 usr/lib/*/libmariadbclient.so
-usr/lib/*/libmariadbservices.a
+usr/lib/*/libmysqlservices.a
 usr/share/aclocal/mysql.m4
