@@ -1,4 +1,3 @@
 libmariadbd-dev: package-name-doesnt-match-sonames libmysqld18
-libmariadbd-dev: embedded-library usr/lib/x86_64-linux-gnu/libmysqld.so.18: libmysqlclient
 # OK, newer Debian should support xz
 libmariadbd-dev: data.tar.xz-member-without-dpkg-pre-depends
