@@ -5,8 +5,3 @@ mariadb-client-5.5: binary-without-manpage usr/bin/innochecksum
 mariadb-client-5.5: binary-without-manpage usr/bin/mysqlanalyze
 mariadb-client-5.5: binary-without-manpage usr/bin/mysqloptimize
 mariadb-client-5.5: binary-without-manpage usr/bin/mysqlrepair
-mariadb-client-5.5: embedded-library usr/bin/mysqladmin: libmysqlclient
-mariadb-client-5.5: embedded-library usr/bin/mysqldump: libmysqlclient
-mariadb-client-5.5: embedded-library usr/bin/mysqlimport: libmysqlclient
-mariadb-client-5.5: embedded-library usr/bin/mysqlshow: libmysqlclient
-mariadb-client-5.5: embedded-library usr/bin/mysqlslap: libmysqlclient
