@@ -13,11 +13,11 @@ diff -Nur mysql-dfsg-5.1-5.1.31.orig/scripts/mysql_config.sh mysql-dfsg-5.1-5.1.
  # Create options 
  # We intentionally add a space to the beginning and end of lib strings, simplifies replace later
 -libs=" $ldflags -L$pkglibdir -lmysqlclient @ZLIB_DEPS@ @NON_THREADED_LIBS@"
-+libs=" $ldflags -L$pkglibdir -lmysqlclient"
++libs=" $ldflags -L$pkglibdir -lmariadbclient"
  libs="$libs @openssl_libs@ @STATIC_NSS_FLAGS@ "
 -libs_r=" $ldflags -L$pkglibdir -lmysqlclient_r @ZLIB_DEPS@ @CLIENT_LIBS@ @openssl_libs@ "
 -embedded_libs=" $ldflags -L$pkglibdir -lmysqld @LIBDL@ @ZLIB_DEPS@ @LIBS@ @WRAPLIBS@ @openssl_libs@ "
-+libs_r=" $ldflags -L$pkglibdir -lmysqlclient_r @CLIENT_LIBS@ @openssl_libs@ "
++libs_r=" $ldflags -L$pkglibdir -lmariadbclient_r @CLIENT_LIBS@ @openssl_libs@ "
 +embedded_libs=" $ldflags -L$pkglibdir -lmysqld @LIBDL@ @WRAPLIBS@ @openssl_libs@ "
  
  if [ -r "$pkglibdir/libmygcc.a" ]; then
